# potato-quake

./: .gitignore  README.md  todo.txt
core/: chase.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  crc.c  cvar.c  cvar.h  draw.c  host.c  host_cmd.c  keys.c  keys.h  mathlib.c  menu.c  net.h  net_loop.c  net_main.c  pr_cmds.c  pr_edict.c  pr_exec.c  progs.h  quakedef.h  sbar.c  screen.c  server.h  sv_main.c  sv_move.c  sv_user.c  sys.h  view.c  wad.c  world.c  zone.c  (+1 more)
core/render/: render.h
core/render/junk/: d_zpoint.c
core/render/original/: d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  model.c  model.h  r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_part.c  r_shared.h  r_sky.c  r_sprite.c  r_surf.c  r_vars.c  render.h
esp/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp/main/: CMakeLists.txt  cd_null.c  common.h  display.c  font.h  in_null.c  main.c  net_none.c  snd_null.c  sys_esp32.c  vid_esp32.c
pi/: cd_null.c  in_null.c  main.c  makefile  net_none.c  sizehelp  snd_null.c  sys_linux.c  vid_pi.c
